Update: Tsoa with StatusCode
